--- a/www/styles/main.css
+++ b/www/styles/main.css
@@ -230,11 +230,18 @@ nav {
 .sub-menu li:last-child {
     border-bottom: 0;
 }
-.menu > li:hover .sub-menu li {
+/*.menu > li:hover .sub-menu li {*/
+.menu > li .li-op-subdiv:hover .sub-menu li, .menu > li .li-plan-subdiv:hover .sub-menu li {
     transform: scale(1);
 }
-.menu > li:hover .sub-menu {
+/*.menu > li:hover .sub-menu {*/
+.menu > li .li-op-subdiv:hover .sub-menu, .menu > li .li-plan-subdiv:hover .sub-menu {
     transform: scale(1);
+}
+.li-op-subdiv, .li-plan-subdiv {
+    display: inline-block;
+    vertical-align: top;
+    margin-right: 20px;
 }
 .li-operation-running {
     background-color: #d9534f;
@@ -338,12 +345,11 @@ section.missing-param-alert {
     margin-bottom: 30px;
 }
 
-/* on écrase certaines des valeurs ci-dessus afin que la section soit masquée au chargement de la page */
 #newRepoSlideDiv, #groupsDiv, #sourcesDiv {
-    width: 0px; /* longueur de 0 par défaut, pour que cette section soit complètement masqué. */
-    padding: 0px; /* padding forcé à 0 par défaut, pour que cette section soit complètement masqué. C'est le script Jquery qui remets le padding à 10 une fois la section affichée */
-    overflow: hidden; /* cacher ce qui dépasse, pour que cette section soit complètement masqué par défaut */
-    opacity: 0;
+    width: 98%;
+    padding: 10px;
+    display: none;
+    /*overflow: hidden; /* cacher ce qui dépasse, pour que cette section soit complètement masqué par défaut */
 }
 
 #serverInfoContainer {
