--- a/www/ressources/styles/main.css
+++ b/www/ressources/styles/main.css
@@ -862,6 +862,7 @@ footer p { color: gray; }
 
 .alert, .alert-success, .alert-error, .deleteAlert { /* div affichant une alerte au milieu de la page */
     width: 100%;
+    height: 20px;
     padding-top: 30px;
     padding-bottom: 30px;
     position: fixed; /* on positionne le div au centre de la page */
@@ -885,11 +886,19 @@ footer p { color: gray; }
     font-size: 18px;
 }
 .deleteAlert-message, .alert-message {
-    display: inline-block;
     font-size: 18px;
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    -webkit-transform: translateX(-50%) translateY(-50%);
+    -moz-transform: translateX(-50%) translateY(-50%);
+    transform: translateX(-50%) translateY(-50%);
 }
 .deleteAlert-buttons-container {
-    float: right;
+    position: absolute;
+    right: 0px;
+    top: 50%;
+    transform: translateY(-50%);
 }
 
 .btn-doDelete, .btn-cancelDelete {
