--- a/www/ressources/styles/main.css
+++ b/www/ressources/styles/main.css
@@ -296,7 +296,7 @@ section.mainSectionRight {
     vertical-align: top; /* force toutes les sous-sections à commencer en haut de la section principale */
 }
 
-section.left, section.right, .section-center, section.missing-param-alert, #newRepoSlideDiv {
+section.left, section.right, .section-center, section.missing-param-alert, #newRepoDiv {
     width: 98%; /* cette section prend toute la largeur ou presque (penser qu'il y a un padding de 10) de sa section conteneur 'mainSectionLeft' */
     margin-bottom: 30px;
     padding: 10px;
@@ -318,7 +318,7 @@ section.left {
     min-height: 300px; 
     display: inline-block;
 }
-section.right, #newRepoSlideDiv {
+section.right, #newRepoDiv {
     float: right;
 }
 section.missing-param-alert {
@@ -328,7 +328,7 @@ section.missing-param-alert {
     margin-bottom: 30px;
 }
 
-#newRepoSlideDiv, #groupsDiv, #sourcesDiv {
+#newRepoDiv, #groupsDiv, #sourcesDiv {
     width: 98%;
     padding: 10px;
     display: none;
@@ -1050,22 +1050,32 @@ footer p { color: gray; }
     flex: 0 0 100%;
 }
 
-#maintenance {
+#maintenance-container {
     position: fixed;
     top: 0;
     left: 0;
     bottom: 0;
     right: 0;
     overflow: auto;
-    background: #252525;
-    opacity: 0.7;
+    background: #333333d3;
+    z-index: 1;
+}
+
+#maintenance {
+    position: absolute;
+    top: 40%;
+    left: 50%;
+    transform: translateX(-50%) translateY(-50%);
+    padding: 30px;
+    border-radius: 2px;
+    border: 1px solid #403f3f;
+    background-color: #333333;
+    -webkit-box-shadow: 0px 10px 13px -12px #000000, 0px 0px 10px 2px rgba(0,0,0,0.15); 
+    box-shadow: 0px 10px 13px -12px #000000, 0px 0px 10px 2px rgb(0 0 0 / 15%);
 }
 
 #maintenance p {
-    height: 100px;
-    line-height: 40;
-    font-size: 20px;
-    font-weight: bold;
+    font-size: 14px;
     text-align: center;
 }
 
