--- a/www/ressources/styles/stats-hosts.css
+++ b/www/ressources/styles/stats-hosts.css
@@ -99,6 +99,23 @@
     white-space: normal;
 }
 
+.chart-loading {
+    position: absolute;
+    left: 50%;
+    top: 40%;
+    -webkit-transform: translateX(-50%) translateY(-50%);
+    -moz-transform: translateX(-50%) translateY(-50%);
+    transform: translateX(-50%) translateY(-50%);
+    z-index: 10;
+}
+
+.groups-list-container {
+    display: grid;
+    grid-gap: 10px;
+    grid-template-columns: repeat(3, 1fr);
+    /* grid-auto-rows: minmax(0, auto); */
+}
+
 .groups-container .header-container {
     width: 32.8%;
     display: inline-block;
@@ -257,12 +274,12 @@
   
 /* Place the container to the left */
 .timeline-container-gray-left, .timeline-container-blue-left, .timeline-container-green-left, .timeline-container-yellow-left, .timeline-container-red-left {
-  left: 0;
+    left: 0;
 }
 
 /* Place the container to the right */
 .timeline-container-gray-right, .timeline-container-blue-right, .timeline-container-green-right, .timeline-container-yellow-right, .timeline-container-red-right {
-  left: 50%;
+    left: 50%;
 }
   
 /* Add arrows to the left container (pointing right) */
@@ -304,86 +321,102 @@
 
 /* Fix the circle for containers on the right side */
 .timeline-container-gray-right::after, .timeline-container-blue-right::after, .timeline-container-green-right::after, .timeline-container-yellow-right::after, .timeline-container-red-right::after {
-  left: -16px;
+    left: -16px;
 }
 
 /* The actual content */
 .timeline-container-content-gray, .timeline-container-content-green, .timeline-container-content-blue, .timeline-container-content-yellow, .timeline-container-content-red {
-  padding: 30px 30px;
-  position: relative;
-  border-radius: 6px;
-  -webkit-box-shadow: 0px 10px 13px -12px #000000, 0px 0px 10px 2px rgb(0 0 0 / 15%);
-  box-shadow: 0px 10px 13px -12px #000000, 0px 0px 10px 2px rgb(0 0 0 / 15%);
+    padding: 30px 30px;
+    position: relative;
+    border-radius: 6px;
+    -webkit-box-shadow: 0px 10px 13px -12px #000000, 0px 0px 10px 2px rgb(0 0 0 / 15%);
+    box-shadow: 0px 10px 13px -12px #000000, 0px 0px 10px 2px rgb(0 0 0 / 15%);
 }
 .timeline-container-content-gray {
-  background-color: #333333;
+    background-color: #333333;
 }
 .timeline-container-content-green {
-  background-color: #489f4d;
+    background-color: #489f4d;
 }
 .timeline-container-content-blue {
-  background-color: #2b426e;
+    background-color: #2b426e;
 }
 .timeline-container-content-yellow {
-  background-color: #eb984e;
+    background-color: #eb984e;
 }
 .timeline-container-content-red {
-  background-color: #d9534f;
+    background-color: #d9534f;
 }
 
 .timeline-event-date {
-  font-size: 12px;
-  opacity: 0.50;
-  position: absolute;
-  top: 2px;
-  left: 4px;
+    font-size: 12px;
+    opacity: 0.50;
+    position: absolute;
+    top: 2px;
+    left: 4px;
 }
 .timeline-event-text {
     font-style: italic;
     font-weight: 600;
 }
 .timeline-event-version {
-  font-size: 12px;
-  opacity: 0.80;
-  position: absolute;
-  bottom: 2px;
-  right: 4px;
+    font-size: 12px;
+    opacity: 0.80;
+    position: absolute;
+    bottom: 2px;
+    right: 4px;
 }
 
 /* Media queries - Responsive timeline on screens less than 600px wide */
 @media screen and (max-width: 600px) {
-  /* Place the timelime to the left */
+    /* Place the timelime to the left */
     .timeline::after {
-      left: 31px;
+        left: 31px;
     }
   
-  /* Full-width containers */
+    /* Full-width containers */
     .timeline-container {
-      width: 100%;
-      padding-left: 70px;
-      padding-right: 25px;
+        width: 100%;
+        padding-left: 70px;
+        padding-right: 25px;
     }
   
-  /* Make sure that all arrows are pointing leftwards */
+    /* Make sure that all arrows are pointing leftwards */
     .timeline-container::before {
-      left: 60px;
-      border: medium solid white;
-      border-width: 10px 10px 10px 0;
-      border-color: transparent white transparent transparent;
+        left: 60px;
+        border: medium solid white;
+        border-width: 10px 10px 10px 0;
+        border-color: transparent white transparent transparent;
     }
   
-  /* Make sure all circles are at the same spot */
+    /* Make sure all circles are at the same spot */
     .timeline-container-left::after, .timeline-container-right::after {
-      left: 15px;
+        left: 15px;
     }
   
-  /* Make all right containers behave like the left ones */
+    /* Make all right containers behave like the left ones */
     .timeline-container-right {
-      left: 0%;
+        left: 0%;
     }
+}
 
+.hostActionBtn-container {
+    max-width: 300px;
+    min-width: 300px;
+    position: absolute;
+    right: 100px;
+    top: 20px;
+    z-index: 1;
+}
 
-    .toto:hover .tutu {
-        display: block;
-    }
+.hostActionBtn {
+    display: none;
+}
+
+.hostActionBtn-action {
+    text-align: right;
+}
+
+.hostActionBtn-container:hover .hostActionBtn {
+    display: block;
 }
