--- a/www/ressources/styles/main.css
+++ b/www/ressources/styles/main.css
@@ -874,9 +874,10 @@ footer p { color: gray; }
 
 .alert, .alert-success, .alert-error, .deleteAlert { /* div affichant une alerte au milieu de la page */
     width: 100%;
-    height: 20px;
+    height: fit-content;
     padding-top: 30px;
     padding-bottom: 30px;
+    font-size: 16px;
     position: fixed; /* on positionne le div au centre de la page */
     bottom: 0;
     left: 0;
@@ -889,6 +890,9 @@ footer p { color: gray; }
     text-align: center;
     vertical-align: middle;
 }
+.deleteAlert {
+    height: 18px;
+}
 .alert-success {
     background-color: #489f4d;
 }
@@ -896,7 +900,7 @@ footer p { color: gray; }
     background-color: firebrick;
 }
 .alert span, .alert-success span, .alert-error span, .deleteAlert span {
-    font-size: 18px;
+    font-size: 16px;
 }
 .deleteAlert-message, .alert-message {
     font-size: 18px;
