--- a/www/public/ressources/styles/explore.css
+++ b/www/public/ressources/styles/explore.css
@@ -11,14 +11,31 @@
 
 #explorer a, #explorer li {
 	text-decoration: none;
-    padding-top: 3px;
-	padding-bottom: 3px;
+}
+
+#explorer li span {
+	background-color: #2b426e;
+	margin-top: 4px;
+	margin-bottom: 4px;
+	padding-top: 8px;
+	padding-bottom: 8px;
+	padding-left: 8px !important;
+	border-radius: 2px;
+	display: block;
+}
+
+#explorer li span:hover {
+	background-color: #263859;
 }
 
 #explorer ul {
 	padding-left: 15px;
 }
 
-#explorer span.explorer-file {
-    color:gray;
+#explorer span.explorer-file-pkg {
+    background-color: #d9534f;
+}
+
+#explorer span.explorer-file-pkg:hover {
+    background-color: #b14440;
 }
